Finished smoke and snapshot tests for Card.js

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/UsersPHOEBE~1AppDataRoamingnpm-cache
 
 npm-debug.log*
 yarn-debug.log*
